--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 
     <title>Pig Game</title>
+    <link rel="shortcut icon" href="dice.jpg">
 </head>
 
 <body>
